test/files/neg/bug1548.check
S.scala:2: error: method defaultMethod overrides nothing
  override def defaultMethod = "Boo!"
               ^
one error found
